--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
     <div class="min-h-screen relative">
         <!-- Основной фон с изображением листвы -->
         <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" 
-             style="background-image: url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?q=80&w=2048&auto=format&fit=crop&ixlib=rb-4.0.3');">
+             style="background-image: url('1.jpg');">
         </div>
         
         <!-- Тонкий темный слой для контраста -->
