--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
     <div class="min-h-screen relative">
         <!-- Основной фон с изображением ромашек -->
         <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" 
-             style="background-image: url('https://images.unsplash.com/photo-1464207687429-7505649dae38?q=80&w=2048&auto=format&fit=crop&ixlib=rb-4.0.3');">
+             style="background-image: url('2.jpg');">
         </div>
         
         <!-- Тонкий темный слой для контраста -->
