--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
     <div class="min-h-screen relative">
         <!-- Основной фон с изображением ромашек -->
         <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" 
-             style="background-image: url('2.jpg');">
+             style="background-image: url('2.jpeg');">
         </div>
         
         <!-- Тонкий темный слой для контраста -->
